resolve layout issue

--- a/scss/scss/_layout.scss
+++ b/scss/scss/_layout.scss
@@ -2,30 +2,24 @@
     .wrapper {
         @extend .d-grid;
         @extend .h-100;
-        @extend .w-100;
         @extend .overflow-hidden;
+        @extend .d-flex;
+
         grid-template-columns: max-content auto;
 
         & > .content {
-
-            @extend .position-relative;
             @extend .overflow-auto;
+            @extend .flex-grow-1;
 
             .page {
 
-                @extend .d-grid;
-                @extend .w-100;
+                @extend .d-flex;
                 @extend .h-100;
-                @extend .position-absolute;
-                grid-template-columns: 20% 80%;
 
                 .left-panel {
-                    @extend .position-relative;
-                    grid-column: 1/2;
+                    @extend .p-4;
 
                     .sidebar-wrapper {
-                        @extend .position-absolute;
-                        @extend .p-4;
                         @extend .w-100;
                         @extend .h-100;
 
@@ -36,27 +30,17 @@
                 }
 
                 .right-panel {
-                    grid-column: 2/2;
-                    @extend .position-relative;
-                    @extend .w-100;
                     @extend .h-100;
                     @extend .pt-5;
                     @extend .mt-4;
+                    @extend .pe-4;
+                    @extend .flex-grow-1;
 
                     .content-wrapper {
-                        @extend .me-4;
                         @extend .h-100;
-                        
-                        /*.applicationContainer {
-                            margin-top: $spacer * 4.5;
-                        }*/
 
                         .scroll-content {
                             @extend .h-100;
-                            .content {
-                                @extend .d-flex;
-                                @extend .flex-column;
-                            }
                         }
                     }
                 }
